Change fixed-links wording colour from light blue to grey for better contrast with the white background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,8 +336,7 @@ body{
     text-decoration: none;
     text-transform: uppercase;
 
-    /* color:rgba(0, 160, 243, 0.5); */
-    color:rgba(0, 160, 243, 0.75);
+    color:rgba(47, 72, 88, 0.75);
     padding:5px;
 }
 
@@ -350,7 +349,7 @@ body{
 /* hover effect on fixed-links text links */
 .fixed-links-words:hover {
     color: #f1fbff;
-    background-color:rgba(47, 72, 88, 0.6);
+    background-color:rgba(0, 160, 243, 0.5);
     border-radius: 8px;
     opacity: 1;
 }
